<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlcrazyflie</name>
  <version>0.0.0</version>
  <description>Low level control of a crazyflie using an RL policy</description>
  <maintainer email="piratax007@protonmail.ch">Fausto</maintainer>
  <license>MIT</license>
  
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>rl_interfaces</depend>
  

  <exec_depend>crazyflie_py</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>stable_baseline3</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
